# BlogProject

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  setup.cfg
blog_project/articles/: models.py  serializers.py  urls.py  views.py
blog_project/articles/migrations/: 0001_initial.py
blog_project/blog_project/: settings.py
